<resources>
    <string name="app_name">SourceRead-Prototype</string>
    <string name="nav_header_title">SourceRead</string>
    <string name="nav_header_subtitle">sourceread@dundee.ac.uk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_apps">Add Apps</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_section_articles">Articles</string>
    <string name="menu_section_apps">Apps</string>
    <string name="menu_section_misc">Miscellaneous</string>
    <string name="menu_article">Article</string>
    <string name="menu_analyse">Analysis</string>
    <string name="menu_app">App</string>
    <string name="menu_section_article">Article</string>
    <string name="menu_section_app">App</string>
    <string name="action_analyse_article">Analyse Article</string>
    <string name="action_refresh_apps">Refresh Apps</string>
    <string name="action_import_articles">Import Articles</string>
    <string name="action_sort">Sort list</string>
    <string name="action_logout_user">Log Out</string>
    <string name="action_help">Help</string>
    <string name="card_image_description">Image for card in list</string>
    <string name="button_import_all">Import all articles</string>
    <string name="button_delete_all">Delete all imported articles</string>
    <string name="search_placeholder">No articles found!</string>
    <string name="search_bar_title">Search:</string>
    <string name="prompt_search">look for articles by title..</string>
    <string name="action_AZ">Alphabetically (A to Z)</string>
    <string name="action_ZA">Alphabetically (Z to A)</string>
    <string name="action_DF">Date of Import (First to Last)</string>
    <string name="action_DL">Date of Import (Last to First)</string>
    <string name="action_VH">Veracity Rating (Highest to Lowest)</string>
    <string name="action_VL">Veracity Rating (Lowest to Highest)</string>
    <string name="dialog_choice_placeholder">Which choice?</string>
    <string name="dialog_help_title">Help</string>
    <string name="dialog_sort_title">Sorting</string>
    <string name="dialog_import_title">Article Import</string>
    <string name="dialog_default_title"></string>
    <string-array name="sorting_options">
        <item>@string/action_AZ</item>
        <item>@string/action_ZA</item>
        <item>@string/action_DF</item>
        <item>@string/action_DL</item>
        <item>@string/action_VH</item>
        <item>@string/action_VL</item>
    </string-array>
    <string name="action_import_apps">Import from connected apps</string>
    <string name="action_import_link">Import a link</string>
    <string-array name="import_options">
        <item>@string/action_import_apps</item>
        <item>@string/action_import_link</item>
    </string-array>
    <string name="dialog_authenticate_app_title">App Login</string>
    <string name="dialog_authenticate_app">The attempt to sign-in/authorise has failed, try again?</string>
    <string name="app_icon_image_description">app icon</string>
    <string name="button_auth">Authenticate app</string>
    <string name="email_verification_needed">You need to verify your email address!</string>
    <string name="email_register">Registration email sent!</string>
    <string name="action_connect_app">Connect</string>
    <string name="action_disconnect_app">Disconnect</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_article">Article</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">login</string>
    <string name="action_register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="register_failed">Registration failed</string>
    <string name="button_delete">Delete Article</string>
    <string name="button_open">Read Article</string>
    <string name="delete_account">Delete Account</string>
    <string-array name="settings_list">
        <item>@string/delete_articles</item>
        <item>@string/disconnect_apps</item>
        <item>@string/action_logout_user</item>
        <item>@string/delete_account</item>
    </string-array>
    <string name="home_placeholder">This is where imported articles appear!</string>
    <string name="apps_placeholder">This is where you add article saver apps!</string>
    <string name="delete_articles">Delete all imported Articles</string>
    <string name="disconnect_apps">Disconnect all connected Apps</string>
    <string name="dialog_open_title">Read Article</string>
    <string name="dialog_open_browser">Open in Browser</string>
    <string name="dialog_open_app">Open in the importing App</string>
    <string-array name="open_list">
        <item>@string/dialog_open_browser</item>
        <item>@string/dialog_open_app</item>
    </string-array>
    <string name="dialog_delete_article">Are you sure you want to delete this article?</string>
    <string name="dialog_connect_app">Are you sure you want to connect this app? (NOTE: We are not affiliated with the makers of the app, and we only use your account to import articles!)</string>
    <string name="dialog_invalid_app">This API has not yet been implemented!</string>
    <string name="dialog_disconnect_app">Are you sure you want to disconnect this app? This will remove all articles from this app, and you will need to reconnect it to import any more articles!</string>
    <string name="dialog_import_all_articles">Are you sure you want to import all articles from this app? You will need to manually delete any you dont want!</string>
    <string name="dialog_delete_all_articles">Are you sure you want to delete all articles? You will need to reimport any you want to keep!</string>
    <string name="dialog_disconnect_all_apps">Are you sure you want to disconnect all apps? You will need to reconnect any you want to keep!</string>
    <string name="dialog_log_out">Are you sure you want to log out?</string>
    <string name="dialog_delete_account">Are you sure you want to delete your account? All personal data is deleted permanently, and you will need to start from scratch if you rejoin!</string>
    <string name="user_sure">I\'m sure!</string>
    <string name="user_ok">OK</string>
    <string name="user_cancel">Cancel</string>
    <string name="dialog_placeholder">Are you sure?</string>
    <string name="help_home">This is the home page, where all imported articles are displayed. To add an article, import from an app or with a link!</string>
    <string name="help_statistics">This is the collection statistics page, where statistics from across your imported collection are aggregated and shown! Statistics should be recalculated upon new imports, deletions or analyses.</string>
    <string name="help_apps">This is the apps list page, where all connected apps are shown and managed! Click on an app to change the settings, or add a new one to begin importing!</string>
    <string name="help_about">This is the about page, where we tell you about ourselves.</string>
    <string name="help_settings">This is the settings page, where you can change any settings, delete any data you\'ve imported into the app, or disconnect any connected apps!</string>
    <string name="help_app">This page shows detailed information on the selected app. You can import and delete any articles in this app here, and can also disconnect the app if you really want to.</string>
    <string name="help_apps_choice">This page lists all currently available apps for importing.</string>
    <string name="help_article">This is the article view page, where all current data about the article is displayed! You can also delete the article from your collection, or open in your phone\'s browser.</string>
    <string name="help_analysis">This page is where the article is analysed. Press \'Analyse Article\' to run! The analysis will then be shown on the page.</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tos">Terms of Service</string>
    <string-array name="about_list">
        <item>@string/contact_us</item>
        <item>@string/privacy_policy</item>
        <item>@string/tos</item>
    </string-array>
    <string name="button_back">Back</string>
    <string name="contact_html">
        <![CDATA[
            <h2>Contact Us</h2>
            <p>
              <a href="https://sourceread.firebaseapp.com" target="_blank" rel="noopener noreferrer">Website</a>
            </p>
            <p>
              Email : dvural@dundee.ac.uk
            </p>
        ]]>
    </string>
</resources>