<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Articles">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_statistics"
                android:icon="@drawable/ic_menu_analyse"
                android:title="@string/menu_statistics" />
        </menu>
    </item>

    <item android:title="Apps">
        <menu>
            <item
                android:id="@+id/nav_apps"
                android:icon="@drawable/ic_menu_add"
                android:title="@string/menu_apps" />
        </menu>
    </item>

    <item android:title="Miscellaneous">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
