<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_main">
    <item
        android:id="@+id/action_import_articles"
        android:orderInCategory="1"
        android:title="@string/action_import_articles"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="2"
        android:title="@string/action_sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh_apps"
        android:orderInCategory="3"
        android:title="@string/action_refresh_apps"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="4"
        android:title="@string/action_help"
        app:showAsAction="never" />
</menu>
